--- a/scss/ds.scss
+++ b/scss/ds.scss
@@ -526,3 +526,38 @@ button { background-color: rgba(0,0,0,0);}
     cursor: pointer;
     &:hover { opacity: 0.7; }
 }
+
+#goPC{
+    display: none;
+    @media screen and (max-width: 767px) {
+        display: block;
+
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        background: #000;
+        color: #fff;
+        width: 100%;
+        height: 100%;
+        z-index: 1111;
+        p {
+            position: absolute;
+            
+    top: 45%;
+    transform: translateY(-50%);
+    left: 0;
+    right: 0;
+    text-align: center;
+    font-size: 24px;
+    line-height: 38px;
+    letter-spacing: -0.5px;
+
+        }
+    }
+}
+
+@media screen and (max-width: 767px) {
+    main { display: none !important }
+}
